--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@ table{
 </head> 
 <body>
 <div class="container_top">
-<h1>ISO, OCC's Intercultural Student Organization<h1/>
+<h1>Android App Development Workshop Resources<h1/>
 </div>
 <div class="banner">
 	<table>
 		<tr>
-			<th style="text-align:left;width:200px;" rowspan="3"><image src="logo.png" style="width:200px;height:200px;" alt="ISO logo"></th>
-			<th style="text-align:left;"><h2><em>Fostering Inclusion,</em></h2></th>
+			<th style="text-align:left;width:200px;" rowspan="3"><image src="logo.png" style="width:200px;height:200px;" alt="Android"></th>
+			<th style="text-align:left;"><h2><em>Fostering Technology,</em></h2></th>
 		</tr>
 		<tr>
-			<th style="text-align:center;"><h2><em>Intercultural Integration,</em></h2></th>
+			<th style="text-align:center;"><h2><em>Entrepreneurship,</em></h2></th>
 		</tr>
 		<tr>
 			<th style="text-align:right;"><h2><em>and Career Development.</em></h2></th>
@@ -99,39 +99,41 @@ table{
 </div>
 <div class="container_bottom">
 
-<br><t1>Who we are?</t1>
-<p>A group of students with multicultural background working towards enhancing inclusion, community values, and academic success.</p>
+<br><t1>Who is this for?</t1>
+<p>This workshop is designed for non-technical entrepreneurs and professinals interested in learning more about mobile app development.<br>
+For entrepreneurs, hiring developers to build their app can be prohibitely expesinve.<br>
+For professionals, learning how to build apps will increase their career options.</p>
 
-<t2>About Us<t/2>
-<p><em>What we stand for:</em><br>
-The Improvement of foreign students' knowledge of American culture and their <br/>
-experience at Oakland Community College. The importance of hosting a welcoming environment<br/>
-and the success of students through adding value to our community by helping each other.</p>
+<t2>About Me<t/2>
+<p><em>What I stand for:</em><br>
+I believe that knowing about the latest technologies can help non-technical people achieve their professional dreams.
  
-<t3>Our Mission</t3> 
-<p>To enlighten and engage intercultural students in our community through our social activities, such as volunteering, networking , and research practices to develop a successful career as students and professionals.</p>
+<t3>My Mission</t3> 
+<p>To help my community get started learning something new.</p>
 
-<t4>Our Focus<br/></t4>
+<t4>My Focus<br/></t4>
 <div class="focus">
 	<ol>
-		<li>Academic Success: Sharing our experience in learning and adjusting to the American education system.</li>
-		<li>Career Development:<br>Getting involved in college activities, promoting networking, and researching on our career interests.</li>
-		<li>Cultural Integration: Volunteering and promoting intercultural inclusion.</li>
+		<li>Professional Success: Sharing my experience in getting paid to build mobile apps</li>
+		<li>Entrepreneurial Success:<br>Show non-technical entrepreneurs that it is possible to succeed in a highly technological market.</li>
 	</ol>
 </div>
-<t5>Contact Us</t5>
+<t5>Contact Me</t5>
 <p>
-Aleida Marmolejo Sanchez, President<br/>
-Phone: <a href="tel=+12489718745">(248) 971-8745</a><br/>
-Email:<br><a href="mailto:marmolejosanchez.ale.student@oaklandcc.edu">marmolejosanchez.ale.student@oaklandcc.edu</a><br/>
-FaceBook: <a href="https://www.facebook.com/Intc.S.O/">Intercultural Student Organisation ISO.</a><br/></p>
+Rod Mastria Mesquita, Organizer<br/>
+Email:<br><a href="mailto:rmesquita@ltu.edu">rmesquita@ltu.edu</a><br/>
+<a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><br/></p>
 
-<t6>Join Us</t6>
-<p>To join us, please email Ms. Sanchez with your full name, major, plans after OCC, and hobbies (interests).</p>
+<t6>Attend my Workshop</t6>
+<p>To attend, please email Rod with with your full name, email, and reason why you want to attend.</p>
+	
+<t7>Cost to Attend</t7>
+<p>$0.00 - Just bring your favorite book or something that inspires you (if any) and be ready to talk about it.
 </div>
+
 <footer>
 	<hr>
-	<address>OCC Orchard Ridge Campus | 27055 Orchard Lake Rd., Farmington Hills, MI | Source code on <a href="https://github.com/rmesquit/interculturalso">GitHub</a></address>
+	<address>Location: Ann Arbor & Southfield area (Michigan, USA) | E-mail rmesquita@ltu.edu to learn more!</address>
 </footer>
 </body>
 <html>
