--- a/index.html
+++ b/index.html
@@ -127,7 +127,11 @@ Email:<br><a href="mailto:rmesquita@ltu.edu">rmesquita@ltu.edu</a><br/>
 <t6>Attend my Workshop</t6>
 <p>To attend, please email Rod with with your full name, email, and reason why you want to attend.</p>
 	
-<t7>Cost to Attend</t7>
+<t7>What to bring</t7>
+<p>You can bring your laptop if you want to get started or if you need help with building your app,<br>
+	but if you just want to learn more, bring something to write on (if you want to take notes).</p>
+	
+<t8>Cost to Attend</t8>
 <p>$0.00 - Just bring your favorite book or something that inspires you (if any) and be ready to talk about it.
 </div>
 
