--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ table{
 </head> 
 <body>
 <div class="container_top">
-<h1>Android App Development Workshop Resources<h1/>
+<h1>Android App Development Workshop<h1/>
 </div>
 <div class="banner">
 	<table>
@@ -100,44 +100,44 @@ table{
 <div class="container_bottom">
 
 <br><t1>Who is this for?</t1>
-<p>This workshop is designed for non-technical entrepreneurs and professinals interested in learning more about mobile app development.<br>
-For entrepreneurs, hiring developers to build their app can be prohibitely expesinve.<br>
-For professionals, learning how to build apps will increase their career options.</p>
+<p>This workshop is designed for non-technical entrepreneurs and professionals interested in learning more about mobile app development.<br>
+For non-tech entrepreneurs, hiring developers to build their app can be prohibitely expesinve, so why not D.I.Y. ?!<br>
+For non-tech professionals, learning how to build mobile apps will increase their career options.</p>
 
 <t2>About Me<t/2>
 <p><em>What I stand for:</em><br>
-I believe that knowing about the latest technologies can help non-technical people achieve their professional dreams.
+I believe that learning about the latest technologies can help non-technical people achieve their professional dreams.</p>
  
 <t3>My Mission</t3> 
 <p>To help my community get started learning something new.</p>
 
 <t4>My Focus<br/></t4>
 <div class="focus">
-	<ol>
-		<li>Professional Success: Sharing my experience in getting paid to build mobile apps</li>
+	<ul>
+		<li>Professional Success: Share my experience in building mobile apps professionally.</li>
 		<li>Entrepreneurial Success:<br>Show non-technical entrepreneurs that it is possible to succeed in a highly technological market.</li>
-	</ol>
+	</ul>
 </div>
 <t5>Contact Me</t5>
 <p>
-Rod Mastria Mesquita, Organizer<br/>
-Email:<br><a href="mailto:rmesquita@ltu.edu">rmesquita@ltu.edu</a><br/>
+Rod M., Organizer<br>
+Email:<a href="mailto:rmesquita@ltu.edu">rmesquita@ltu.edu</a><br>
 <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><br/></p>
 
 <t6>Attend my Workshop</t6>
-<p>To attend, please email Rod with with your full name, email, and reason why you want to attend.</p>
+<p>To attend, please email me with with your first and last name, email, and reason why you want to attend.</p>
 	
 <t7>What to bring</t7>
 <p>You can bring your laptop if you want to get started or if you need help with building your app,<br>
 	but if you just want to learn more, bring something to write on (if you want to take notes).</p>
 	
 <t8>Cost to Attend</t8>
-<p>$0.00 - Just bring your favorite book or something that inspires you (if any) and be ready to talk about it.
+<p>$0.00 - Just bring your favorite book or something that inspires you (if any).
 </div>
 
 <footer>
 	<hr>
-	<address>Location: Ann Arbor & Southfield area (Michigan, USA) | E-mail rmesquita@ltu.edu to learn more!</address>
+	<address>Location: Ann Arbor & Southfield area (Michigan, USA)</address>
 </footer>
 </body>
 <html>
