--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ h1{
 	text-align: center;
 }
 
-t1, t2, t3, t4, t5, t6{   
+t1, t2, t3, t4, t5, t6, t7, t8{   
 	color: #006064; /* cyan 900 from https://material.google.com/style/color.html#color-color-palette */
 	text-align:left;
 	font-size: 24px;
@@ -101,37 +101,37 @@ table{
 
 <br><t1>Who is this for?</t1>
 <p>This workshop is designed for non-technical entrepreneurs and professionals interested in learning more about mobile app development.<br>
-For non-tech entrepreneurs, hiring developers to build their app can be prohibitely expesinve, so why not D.I.Y. ?!<br>
+For non-tech entrepreneurs, hiring developers to build their app can be prohibitely expesinve, so why not D.I.Y. ?<br>
 For non-tech professionals, learning how to build mobile apps will increase their career options.</p>
 
-<t2>About Me<t/2>
+<t2>About me<t/2>
 <p><em>What I stand for:</em><br>
 I believe that learning about the latest technologies can help non-technical people achieve their professional dreams.</p>
  
-<t3>My Mission</t3> 
+<t3>My mission</t3> 
 <p>To help my community get started learning something new.</p>
 
-<t4>My Focus<br/></t4>
+<t4>My focus<br/></t4>
 <div class="focus">
 	<ul>
 		<li>Professional Success: Share my experience in building mobile apps professionally.</li>
 		<li>Entrepreneurial Success:<br>Show non-technical entrepreneurs that it is possible to succeed in a highly technological market.</li>
 	</ul>
 </div>
-<t5>Contact Me</t5>
+<t5>Contact me</t5>
 <p>
-Rod M., Organizer<br>
-Email:<a href="mailto:rmesquita@ltu.edu">rmesquita@ltu.edu</a><br>
-<a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><br/></p>
+Rod M. - Organizer<br>
+Email: <a href="mailto:rmesquita@ltu.edu">rmesquita@ltu.edu</a><br>
+Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><br/></p>
 
-<t6>Attend my Workshop</t6>
+<t6>Attend my workshop</t6>
 <p>To attend, please email me with with your first and last name, email, and reason why you want to attend.</p>
 	
 <t7>What to bring</t7>
 <p>You can bring your laptop if you want to get started or if you need help with building your app,<br>
 	but if you just want to learn more, bring something to write on (if you want to take notes).</p>
 	
-<t8>Cost to Attend</t8>
+<t8>Cost to attend</t8>
 <p>$0.00 - Just bring your favorite book or something that inspires you (if any).
 </div>
 
