--- a/index.html
+++ b/index.html
@@ -109,30 +109,31 @@ For non-tech professionals, learning how to build mobile apps will increase thei
 I believe that learning about the latest technologies can help non-technical people achieve their professional dreams.</p>
  
 <t3>My mission</t3> 
-<p>To help my community get started learning something new.</p>
+<p>To help my community get started building mobile apps.</p>
 
 <t4>My focus<br/></t4>
 <div class="focus">
 	<ul>
-		<li>Professional Success: Share my experience in building mobile apps professionally.</li>
-		<li>Entrepreneurial Success:<br>Show non-technical entrepreneurs that it is possible to succeed in a highly technological market.</li>
+		<li>Professional Success: Share my professional experience building mobile apps.</li>
+		<li>Entrepreneurial Success:<br>Show non-technical entrepreneurs how to get started in a highly technological market.</li>
 	</ul>
 </div>
-<t5>Contact me</t5>
+
+<t5>Meet me for an One-on-one Workshop</t5>
+<p>To schedule your session, please email me with with your first and last name, email, and reason why you want to attend.</p>
+	
+<t6>Contact me</t6>
 <p>
 Rod M. - Organizer<br>
 Email: <a href="mailto:rmesquita@ltu.edu">rmesquita@ltu.edu</a><br>
 Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><br/></p>
-
-<t6>Attend my workshop</t6>
-<p>To attend, please email me with with your first and last name, email, and reason why you want to attend.</p>
 	
 <t7>What to bring</t7>
 <p>You can bring your laptop if you want to get started or if you need help with building your app,<br>
 	but if you just want to learn more, bring something to write on (if you want to take notes).</p>
 	
 <t8>Cost to attend</t8>
-<p>$0.00 - Just bring your favorite book or something that inspires you (if any).
+<p>$0.00 - Offer me a referral on my LinkedIn page :)
 </div>
 
 <footer>
