--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 	but if you just want to learn more, bring something to write on (if you want to take notes).</p>
 	
 <t8>Cost to attend</t8>
-<p>$0.00 - Offer me a referral on my LinkedIn page :)
+<p>$0.00 - Endorse or write me a referral on LinkedIn if you like my workshop :)
 </div>
 
 <footer>
