--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ h1{
 	text-align: center;
 }
 
-t1, t2, t3, t4, t5, t6, t7, t8{   
+t1, t2, t3, t4, t5, t6, t7, t8, t9{   
 	color: #006064; /* cyan 900 from https://material.google.com/style/color.html#color-color-palette */
 	text-align:left;
 	font-size: 24px;
@@ -133,7 +133,11 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 	but if you just want to learn more, bring something to write on (if you want to take notes).</p>
 	
 <t8>Cost to attend</t8>
-<p>$0.00 - Endorse or write me a referral on LinkedIn if you like my workshop :)
+<p>$0.00 - Endorse or write me a referral on LinkedIn if you like my workshop :)</p>
+
+	<t9>Previous events</t9>
+	<p>Pictures coming soon</p>	
+	
 </div>
 
 <footer>
