--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ table{
 </head> 
 <body>
 <div class="container_top">
-<h1>Android App Development Workshop<h1/>
+<h1>Android App Development One-on-one Workshop<h1/>
 </div>
 <div class="banner">
 	<table>
