--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 <p>$0.00 - Endorse or write me a referral on LinkedIn if you like my workshop :)</p>
 
 	<t9>Previous events</t9>
-	<p>Pictures coming soon</p>	
+	<p>SpartaHack 2018</p><image src="spartahack2018.png" style="width:1123px;height:632px;" alt="SpartaHack 2018">	
 	
 </div>
 
