--- a/index.html
+++ b/index.html
@@ -130,13 +130,19 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 	
 <t7>What to bring</t7>
 <p>You can bring your laptop if you want to get started or if you need help with building your app,<br>
-	but if you just want to learn more, bring something to write on (if you want to take notes).</p>
+	but if you just want to learn more, bring something to write on (if you want to take notes).<br>
+	To get the most from your sessions, please have 
+	<a href="https://https://developer.android.com/studio/">Android Studio</a> installed in your computer.</p>
 	
 <t8>Cost to attend</t8>
 <p>$0.00 - Endorse or write me a referral on LinkedIn if you like my workshop :)</p>
 
 	<t9>Previous events</t9>
-	<p>SpartaHack 2018</p><image src="spartahack2018.png" style="width:1123px;height:632px;" alt="SpartaHack 2018">	
+	<p><image src="spartahack2018.png" style="width:1123px;height:632px;" alt="SpartaHack 2018">
+		SpartaHack 2018: From left to right: Rod M., Arpan Rughani, 
+		<a href="https://www.linkedin.com/in/smriti-wadhwa//">Smriti Wadhwa</a>, 
+		<a href="https://www.linkedin.com/in/aaron-crutchfield/">Aaron Crutchfield</a>
+		</p>
 	
 </div>
 
