--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ table{
 </head> 
 <body>
 <div class="container_top">
-<h1>Android App Development One-on-one Workshop<h1/>
+<h1>Android App Development: An One-on-one Workshop<h1/>
 </div>
 <div class="banner">
 	<table>
@@ -132,13 +132,13 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 <p>You can bring your laptop if you want to get started or if you need help with building your app,<br>
 	but if you just want to learn more, bring something to write on (if you want to take notes).<br>
 	To get the most from your sessions, please have 
-	<a href="https://https://developer.android.com/studio/" target="_blank">Android Studio</a> installed in your computer.</p>
+	<a href="https://developer.android.com/studio/" target="_blank">Android Studio</a> installed in your computer.</p>
 	
 <t8>Cost to attend</t8>
 <p>$0.00 - Endorse or write me a referral on LinkedIn if you like my workshop :)</p>
 
 	<t9>Previous events</t9>
-	<p><image src="spartahack2018.jpg" style="width:1123px;height:632px;" alt="SpartaHack 2018">
+	<p><image src="spartahack2018.jpg" style="width:560px;height:315px;" alt="SpartaHack 2018">
 		SpartaHack 2018: From left to right: Rod M., Arpan Rughani, 
 		<a href="https://www.linkedin.com/in/smriti-wadhwa/" target="_blank">Smriti Wadhwa</a>, 
 		<a href="https://www.linkedin.com/in/aaron-crutchfield/" target="_blank">Aaron Crutchfield</a>
