--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 <t7>What to bring</t7>
 <p>You can bring your laptop if you want to get started or if you need help with building your app,<br>
 	but if you just want to learn more, bring something to write on (if you want to take notes).<br>
-	To get the most from your sessions, please have 
-	<a href="https://developer.android.com/studio/" target="_blank">Android Studio</a> installed in your computer.</p>
+	To get the most from your session, please have 
+	<a href="https://developer.android.com/studio/" target="_blank">Android Studio</a> downloaded in your computer.<br>
+	I can help you set it up.</p>
 	
 <t8>Cost to attend</t8>
 <p>$0.00 - Endorse or write me a referral on LinkedIn if you like my workshop :)</p>
