--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 
 	<t9>Previous events</t9>
 	<p><image src="spartahack2018.jpg" style="width:560px;height:315px;" alt="SpartaHack 2018">
-		SpartaHack 2018: From left to right: Rod M., Arpan Rughani, 
+		<br>SpartaHack 2018: From left to right:<br>Rod M., Arpan Rughani, 
 		<a href="https://www.linkedin.com/in/smriti-wadhwa/" target="_blank">Smriti Wadhwa</a>, 
 		<a href="https://www.linkedin.com/in/aaron-crutchfield/" target="_blank">Aaron Crutchfield</a>
 		</p>
