--- a/index.html
+++ b/index.html
@@ -140,9 +140,12 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 
 	<t9>Previous events</t9>
 	<p><image src="spartahack2018.jpg" style="width:560px;height:315px;" alt="SpartaHack 2018">
-		<br>SpartaHack 2018: From left to right:<br>Rod M., Arpan Rughani, 
+		<br><a href="https://www.spartahack.com/" target="_blank">SpartaHack</a> 2018: From left to right:<br>
+		Rod M., Arpan Rughani, 
 		<a href="https://www.linkedin.com/in/smriti-wadhwa/" target="_blank">Smriti Wadhwa</a>, 
-		<a href="https://www.linkedin.com/in/aaron-crutchfield/" target="_blank">Aaron Crutchfield</a>
+		<a href="https://www.linkedin.com/in/aaron-crutchfield/" target="_blank">Aaron Crutchfield</a><br>
+		In this event, I mentored Aaron and Smriti. They built an Android app leveraging Arpan's API <br>
+		(from Intrepid Control Systems) to automate the doors of the Tesla Model X (shown in the picture).
 		</p>
 	
 </div>
