--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ table{
 <div class="container_bottom">
 
 <br><t1>Who is this for?</t1>
-<p>This workshop is designed for non-technical entrepreneurs and professionals interested in learning more about mobile app development.<br>
+<p>Non-technical entrepreneurs and professionals interested in learning more about mobile app development.<br>
 For non-tech entrepreneurs, hiring developers to build their app can be prohibitely expesinve, so why not D.I.Y. ?<br>
 For non-tech professionals, learning how to build mobile apps will increase their career options.</p>
 
@@ -114,8 +114,8 @@ I believe that learning about the latest technologies can help non-technical peo
 <t4>My focus<br/></t4>
 <div class="focus">
 	<ul>
-		<li>Professional Success: Share my professional experience building mobile apps.</li>
-		<li>Entrepreneurial Success:<br>Show non-technical entrepreneurs how to get started in a highly technological market.</li>
+		<li>Share my professional experience building mobile apps.</li>
+		<li>Show non-technical entrepreneurs how to get started in a highly technological market.</li>
 	</ul>
 </div>
 
