--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 <t8>Cost to attend</t8>
 <p>$0.00 - Endorse or write me a referral on LinkedIn if you like my workshop :)</p>
 
+	<t9>Location</t9>
+	<p>Ann Arbor & Southfield area (specific location will vary depending on demand)</p>
+	
 	<t9>Previous events</t9>
 	<p><image src="spartahack2018.jpg" style="width:560px;height:315px;" alt="SpartaHack 2018">
 		<br><a href="https://www.spartahack.com/" target="_blank">SpartaHack</a> 2018: From left to right:<br>
@@ -147,6 +150,10 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 		In this event, I mentored Aaron and Smriti. They built an Android app leveraging Arpan's API <br>
 		(from Intrepid Control Systems) to automate the doors of the Tesla Model X (shown in the picture).
 		</p>
+		
+		<t9>Feedback</t9>
+		<p>I always welcome constructive feedback!<br>
+			Please send it to the email above or even better: tell me in person :)
 	
 </div>
 
