--- a/index.html
+++ b/index.html
@@ -153,7 +153,10 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 		
 		<t9>Feedback</t9>
 		<p>I always welcome constructive feedback!<br>
-			Please send it to the email above or even better: tell me in person :)
+			Please send it to the email above or even better: tell me in person :)</p>
+	
+	<t9>Resources</t9>
+	<p><a href="https://github.com/rmesquit/android_resources" target="_blank">Android-related resources</a></p>
 	
 </div>
 
