--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 		</p>
 		
 		<t9>Feedback</t9>
-		<p>I always welcome constructive feedback!<br>
+		<p>I always welcome constructive feedback<br>
 			Please send it to the email above or even better: tell me in person :)</p>
 	
 	<t9>Resources</t9>
