--- a/index.html
+++ b/index.html
@@ -142,13 +142,19 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 	<p>Ann Arbor & Southfield area (specific location will vary depending on demand)</p>
 	
 	<t9>Previous events</t9>
-	<p><image src="spartahack2018.jpg" style="width:560px;height:315px;" alt="SpartaHack 2018">
+		<p><image src="spartahack2018.jpg" style="width:560px;height:315px;" alt="SpartaHack 2018">
 		<br><a href="https://www.spartahack.com/" target="_blank">SpartaHack</a> 2018: From left to right:<br>
 		Rod M., Arpan Rughani, 
 		<a href="https://www.linkedin.com/in/smriti-wadhwa/" target="_blank">Smriti Wadhwa</a>, 
 		<a href="https://www.linkedin.com/in/aaron-crutchfield/" target="_blank">Aaron Crutchfield</a><br>
 		In this event, I mentored Aaron and Smriti. They built an Android app leveraging Arpan's API <br>
 		(from Intrepid Control Systems) to automate the doors of the Tesla Model X (shown in the picture).
+		</p>
+		
+		<p><image src="ltu_2014.jpg" style="width:736px;height:500px;" alt="LTU Collaboratory 2014"><br>
+		<a href="http://www.ltucollaboratory.com/" target="_blank">LTU Collaboratory</a> 2014: From left to right:<br>
+		Rod M., Jorge Chagas, Francis "Tex" Criqui<br>
+		In this event, Jorge and I won the "Best Team Award" for building a language learning app<br>
 		</p>
 		
 		<t9>Feedback</t9>
