--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 	
 	<t9>Previous events</t9>
 		<p><image src="spartahack2018.jpg" style="width:560px;height:315px;" alt="SpartaHack 2018">
-		<br><a href="https://www.spartahack.com/" target="_blank">SpartaHack</a> 2018: From left to right:<br>
-		Rod M., Arpan Rughani, 
+		<br><a href="https://www.spartahack.com/" target="_blank">SpartaHack</a> 2018<br>
+		From left to right: Rod M., Arpan Rughani, 
 		<a href="https://www.linkedin.com/in/smriti-wadhwa/" target="_blank">Smriti Wadhwa</a>, 
 		<a href="https://www.linkedin.com/in/aaron-crutchfield/" target="_blank">Aaron Crutchfield</a><br>
 		In this event, I mentored Aaron and Smriti. They built an Android app leveraging Arpan's API <br>
@@ -152,8 +152,8 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 		</p>
 		
 		<p><image src="ltu_2014.jpg" style="width:536px;height:300px;" alt="LTU Collaboratory 2014"><br>
-		<a href="http://www.ltucollaboratory.com/" target="_blank">LTU Collaboratory</a> 2014: From left to right:<br>
-		Rod M., Jorge Chagas, Francis "Tex" Criqui<br>
+		<a href="http://www.ltucollaboratory.com/" target="_blank">LTU Collaboratory</a> 2014<br>
+		From left to right: Rod M., Jorge Chagas, Francis "Tex" Criqui<br>
 		In this event, Jorge and I won the "Best Team Award" for building a language learning app<br>
 		</p>
 		
