--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 		<a href="https://www.linkedin.com/in/smriti-wadhwa/" target="_blank">Smriti Wadhwa</a>, 
 		<a href="https://www.linkedin.com/in/aaron-crutchfield/" target="_blank">Aaron Crutchfield</a><br>
 		In this event, I mentored Aaron and Smriti. They built an Android app leveraging Arpan's API <br>
-		(from Intrepid Control Systems) to automate the doors of the Tesla Model X (shown in the picture).
+		(from Intrepid Control Systems) to automate the doors of the Tesla Model X (shown in the picture)
 		</p>
 		
-		<p><image src="ltu_2014.jpg" style="width:536px;height:300px;" alt="LTU Collaboratory 2014"><br>
+		<p><image src="ltu_2014.jpg" style="width:536px;height:320px;" alt="LTU Collaboratory 2014"><br>
 		<a href="http://www.ltucollaboratory.com/" target="_blank">LTU Collaboratory</a> 2014<br>
 		From left to right: Rod M., Jorge Chagas, Francis "Tex" Criqui<br>
 		In this event, Jorge and I won the "Best Team Award" for building a language learning app<br>
