--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 	I can help you set it up.</p>
 	
 <t8>Cost to attend</t8>
-<p>$0.00 - Endorse or write me a referral on LinkedIn if you like my workshop :)</p>
+<p>$0.00 - Endorse or write me a recommendation on LinkedIn if you like my workshop :)</p>
 
 	<t9>Location</t9>
 	<p>Ann Arbor & Southfield area (specific location will vary depending on demand)</p>
