--- a/index.html
+++ b/index.html
@@ -106,7 +106,14 @@ For non-tech professionals, learning how to build mobile apps will increase thei
 
 <t2>About me<t/2>
 <p><em>What I stand for:</em><br>
-I believe that learning about the latest technologies can help non-technical people achieve their professional dreams.</p>
+I believe that learning about the latest technologies can help non-technical leaders achieve their professional dreams.</p>
+	<p><em>What I do for a living:</em>
+		I've been building mobile apps since 2014. In the beginning, I would only get paid when I won prize money from hackathons<br>
+		Eventually I landed a job as an Android Software Engineer at Arbormoon Software Inc. (ASI), a small consultancy in Ann Arbor, MI.<br>
+		During my 12 months at ASI, I immersed myself in code during the week, and hosted a similar version of this workshop on Saturdays.<br>
+		As of today (Fall 2018), I am back to school and pursuing a B.S. in Computer Science from Lawrence Tech University.
+		
+	</p>
  
 <t3>My mission</t3> 
 <p>To help my community get started building mobile apps.</p>
