--- a/index.html
+++ b/index.html
@@ -105,14 +105,13 @@ For non-tech entrepreneurs, hiring developers to build their app can be prohibit
 For non-tech professionals, learning how to build mobile apps will increase their career options.</p>
 
 <t2>About me<t/2>
-<p><em>What I stand for:</em><br>
-I believe that learning about the latest technologies can help non-technical leaders achieve their professional dreams.</p>
-	<p><em>What I do for a living:</em>
-		I've been building mobile apps since 2014. In the beginning, I would only get paid when I won prize money from hackathons<br>
-		Eventually I landed a job as an Android Software Engineer at Arbormoon Software Inc. (ASI), a small consultancy in Ann Arbor, MI.<br>
-		During my 12 months at ASI, I immersed myself in code during the week, and hosted a similar version of this workshop on Saturdays.<br>
-		As of today (Fall 2018), I am back to school and pursuing a B.S. in Computer Science from Lawrence Tech University.
-		
+	<p><em>What I stand for:</em><br>
+		I believe that learning about the latest technologies can help non-technical leaders achieve their professional dreams.</p>
+	<p><em>What I do for a living:</em><br>
+		I've been building mobile apps since 2014. In the beginning, I would only get paid when I won prize money from hackathons.<br>
+		Eventually I landed a job as an Android Software Engineer at ASI, a small consultancy in Ann Arbor, MI.<br>
+		where I spent a year immersed in code during the week, and hosted a similar version of this workshop on Saturdays.<br>
+		As of today, I am back to school and pursuing a B.S. in Computer Science from Lawrence Tech University.
 	</p>
  
 <t3>My mission</t3> 
