--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ For non-tech professionals, learning how to build mobile apps will increase thei
 	<p><em>What I stand for:</em><br>
 		I believe that learning about the latest technologies can help non-technical leaders achieve their professional dreams.</p>
 	<p><em>What I do for a living:</em><br>
-		I've been building mobile apps since 2014. In the beginning, I would only get paid when I won prize money from hackathons.<br>
+		I've been building apps since 2014. Initially, I would get paid when I won prize money from competitions.<br>
 		Eventually I landed a job as an Android Software Engineer at ASI, a small consultancy in Ann Arbor, MI.<br>
 		where I spent a year immersed in code during the week, and hosted a similar version of this workshop on Saturdays.<br>
 		As of today, I am back to school and pursuing a B.S. in Computer Science from Lawrence Tech University.
