--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ table{
 </head> 
 <body>
 <div class="container_top">
-<h1>Android App Development: An One-on-one Workshop<h1/>
+<h1>Android App Development Consulting<h1/>
 </div>
 <div class="banner">
 	<table>
@@ -125,7 +125,7 @@ For non-tech professionals, learning how to build mobile apps will increase thei
 	</ul>
 </div>
 
-<t5>Meet me for your One-on-one Workshop</t5>
+<t5>Meet me</t5>
 <p>To schedule your session, please email me with with your first and last name, email, and reason you want to meet.</p>
 	
 <t6>Contact me</t6>
@@ -142,7 +142,7 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 	I can help you set it up.</p>
 	
 <t8>Cost to attend</t8>
-<p>$0.00 - Endorse or write me a recommendation on LinkedIn if you like my workshop :)</p>
+<p>$0.00 - Endorse or write me a recommendation on LinkedIn if I was helpful. :)</p>
 
 	<t9>Location</t9>
 	<p>Ann Arbor & Southfield area (specific location will vary depending on demand)</p>
