--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ For non-tech professionals, learning how to build mobile apps will increase thei
 </div>
 
 <t5>Meet me</t5>
-<p>To schedule your session, please email me with with your first and last name, email, and reason you want to meet.</p>
+<p>To schedule your session, please email me your first and last name, and reason you want to meet.</p>
 	
 <t6>Contact me</t6>
 <p>
