--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 	
 	<t9>Resources</t9>
 	<p><a href="https://github.com/rmesquit/android_resources" target="_blank">Android-related resources</a></p>
+	<t9>Donate</t9>
+	<p>Help me <a href="https://paypal.me/devrodm" target="_blank">pay for school</a></p>
 	
 </div>
 
