--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@ For non-tech professionals, learning how to build mobile apps will increase thei
 		I believe that learning about the latest technologies can help non-technical leaders achieve their professional dreams.</p>
 	<p><em>What I do for a living:</em><br>
 		I've been building apps since 2014. Initially, I got paid when I won prize money from competitions.<br>
-		Eventually I landed a job as an Android Software Engineer at ASI, a small consultancy in Ann Arbor, MI.<br>
-		where I spent a year immersed in code during the week, and hosted a similar version of this workshop on Saturdays.<br>
+		Eventually I landed a job as an Android Software Engineer at ASI, a small consultancy in Ann Arbor, MI,<br>
+		where I spent a year immersed in code, and hosted this consulting event every other Saturday.<br>
 		As of today, I am back to school and pursuing a B.S. in Computer Science from Lawrence Tech University.
 	</p>
  
@@ -142,7 +142,7 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 	I can help you set it up.</p>
 	
 <t8>Cost to attend</t8>
-<p>$0.00 - Endorse or write me a recommendation on LinkedIn if I was helpful. :)</p>
+<p>$0.00 - Endorse or write me a recommendation on LinkedIn if I was helpful :)</p>
 	
 	<t9>Donate</t9>
 	<p>Help me pay for school, every dollar counts: <a href="https://paypal.me/devrodm" target="_blank">link to PayPal</a></p>
@@ -168,7 +168,7 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 		</p>
 		
 		<t9>Feedback</t9>
-		<p>I always welcome constructive feedback<br>
+		<p>I always welcome constructive feedback.<br>
 			Please send it to the email above or even better: tell me in person :)</p>
 	
 	<t9>Resources</t9>
