--- a/index.html
+++ b/index.html
@@ -166,6 +166,11 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 		From left to right: Rod M., Jorge Chagas, Francis "Tex" Criqui<br>
 		In this event, Jorge and I won the "Best Team Award" for building a language learning app<br>
 		</p>
+			
+		<p><image src="LocalHackDay2017.jpg" style="width:560px;height:316px;" alt="MLH Local Hack Day 2017"><br>
+		<a href="https://www.meetup.com/gdg-a2/events/245141187/" target="_blank">MLH Local Hack Day 2017</a><br>
+		In this event, I hosted MLH's Local Hack Day: digital workshops and 12 hours of coding.<br>
+		</p>
 		
 		<t9>Feedback</t9>
 		<p>I always welcome constructive feedback.<br>
