--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 	<p>Ann Arbor & Southfield area (specific location will vary depending on demand)</p>
 	
 	<t9>Previous events</t9>
+	
 		<p><image src="spartahack2018.jpg" style="width:560px;height:315px;" alt="SpartaHack 2018">
 		<br><a href="https://www.spartahack.com/" target="_blank">SpartaHack</a> 2018<br>
 		From left to right: Rod M., Arpan Rughani, 
@@ -160,16 +161,16 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 		In this event, I mentored Aaron and Smriti. They built an Android app leveraging Arpan's API <br>
 		(from Intrepid Control Systems) to automate the doors of the Tesla Model X (shown in the picture)
 		</p>
+			
+		<p><image src="LocalHackDay2017.jpg" style="width:560px;height:316px;" alt="MLH Local Hack Day 2017"><br>
+		<a href="https://www.meetup.com/gdg-a2/events/245141187/" target="_blank">MLH Local Hack Day</a> 2017<br>
+		In this event, I hosted MLH's Local Hack Day: digital workshops and 12 hours of coding.<br>
+		</p>
 		
 		<p><image src="ltu_2014.jpg" style="width:560px;height:380px;" alt="LTU Collaboratory 2014"><br>
 		<a href="http://www.ltucollaboratory.com/" target="_blank">LTU Collaboratory</a> 2014<br>
 		From left to right: Rod M., Jorge Chagas, Francis "Tex" Criqui<br>
 		In this event, Jorge and I won the "Best Team Award" for building a language learning app<br>
-		</p>
-			
-		<p><image src="LocalHackDay2017.jpg" style="width:560px;height:316px;" alt="MLH Local Hack Day 2017"><br>
-		<a href="https://www.meetup.com/gdg-a2/events/245141187/" target="_blank">MLH Local Hack Day 2017</a><br>
-		In this event, I hosted MLH's Local Hack Day: digital workshops and 12 hours of coding.<br>
 		</p>
 		
 		<t9>Feedback</t9>
