--- a/index.html
+++ b/index.html
@@ -162,6 +162,11 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 		(from Intrepid Control Systems) to automate the doors of the Tesla Model X (shown in the picture)
 		</p>
 			
+		<p><image src="AaronCrutchfield.jpg" style="width:560px;height:324px;" alt="App demo"><br>
+		App Demo<br>
+		In this consulting event, I mentored Aaron Crutchfield as he worked on his Android app.<br>
+		</p>
+			
 		<p><image src="LocalHackDay2017.jpg" style="width:560px;height:316px;" alt="MLH Local Hack Day 2017"><br>
 		<a href="https://www.meetup.com/gdg-a2/events/245141187/" target="_blank">MLH Local Hack Day</a> 2017<br>
 		In this event, I hosted MLH's Local Hack Day: digital workshops and 12 hours of coding.<br>
