--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 		(from Intrepid Control Systems) to automate the doors of the Tesla Model X (shown in the picture)
 		</p>
 			
-		<p><image src="AaronCrutchfield.jpg" style="width:560px;height:324px;" alt="App demo"><br>
+		<p><image src="AaronCrutchfield.png" style="width:560px;height:324px;" alt="App demo"><br>
 		App Demo<br>
 		In this consulting event, I mentored Aaron Crutchfield as he worked on his Android app.<br>
 		</p>
