--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Android Workshop Resources</title>
+<title>Mobile App Resources</title>
 <style>
 
 h1{	
@@ -190,7 +190,7 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 
 <footer>
 	<hr>
-	<address>Location: Ann Arbor & Southfield area (Michigan, USA)</address>
+	The best way to predict your future is to create it yourself
 </footer>
 </body>
 <html>
