--- a/index.html
+++ b/index.html
@@ -134,20 +134,20 @@ Rod M. - Organizer<br>
 Email: <a href="mailto:rmesquita@ltu.edu">rmesquita@ltu.edu</a><br>
 Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><br/></p>
 	
-<t7>What to bring</t7>
-<p>You can bring your laptop if you want to get started or if you need help with building your app,<br>
-	but if you just want to learn more, bring something to write on (if you want to take notes).<br>
-	To get the most from your session, please have 
-	<a href="https://developer.android.com/studio/" target="_blank">Android Studio</a> downloaded in your computer.<br>
-	I can help you set it up.</p>
+		<t7>What to bring</t7>
+		<p>You can bring your laptop if you want to get started or if you need help with building your app,<br>
+		but if you just want to learn more, bring something to write on (if you want to take notes).<br>
+		To get the most from your session, please have 
+		<a href="https://developer.android.com/studio/" target="_blank">Android Studio</a> downloaded in your computer.<br>
+		I can help you set it up.</p>
 	
-<t8>Cost to attend</t8>
-<p>$0.00 - Endorse or write me a recommendation on LinkedIn if I was helpful :)</p>
+		<t8>Cost to attend</t8>
+		<p>$0.00 - Endorse or write me a recommendation on LinkedIn if I was helpful :)</p>
 
-	<t9>Location</t9>
-	<p>Ann Arbor & Southfield area (specific location will vary depending on demand)</p>
+		<t9>Location</t9>
+		<p>Ann Arbor & Southfield area (specific location will vary depending on demand)</p>
 	
-	<t9>Previous events</t9>
+		<t9>Previous events</t9>
 	
 		<p><image src="spartahack2018.jpg" style="width:560px;height:315px;" alt="SpartaHack 2018">
 		<br><a href="https://www.spartahack.com/" target="_blank">SpartaHack</a> 2018<br>
@@ -176,15 +176,13 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 		
 		<t9>Feedback</t9>
 		<p>I always welcome constructive feedback.<br>
-			Please send it to the email above or even better: tell me in person :)</p>
+		Please send it to the email above or even better: tell me in person :)</p>
 	
-	<t9>Resources</t9>
-	<p><a href="https://github.com/rmesquit/android_resources" target="_blank">Android-related resources</a></p>
+		<t9>Resources</t9>
+		<p><a href="https://github.com/rmesquit/android_resources" target="_blank">Android-related resources</a></p>
 
-	
-	<t9>Donate</t9>
-	<p>Help me pay for school, every dollar counts: <a href="https://paypal.me/devrodm" target="_blank">link to PayPal</a></p>
-	
+		<t9>Donate</t9>
+		<p>Help me pay for school, every dollar counts: <a href="https://paypal.me/devrodm" target="_blank">seure link to PayPal</a></p>
 	
 </div>
 
