--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 		<p><a href="https://github.com/rmesquit/android_resources" target="_blank">Android-related resources</a></p>
 
 		<t9>Donate</t9>
-		<a href="https://paypal.me/devrodm" target="_blank">Secure link to PayPal</a></p>
+		<p><a href="https://paypal.me/devrodm" target="_blank">Secure link to PayPal</a></p>
 	
 </div>
 
