--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 
 <footer>
 	<hr>
-	<em>The best way to predict your future is to create it yourself and with like-minded individuals.</em>
+	<em>The best way to predict your future is to create it with like-minded individuals.</em>
 </footer>
 </body>
 <html>
