--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 		</p>
 			
 		<p><image src="AaronCrutchfield.png" style="width:560px;height:324px;" alt="App demo"><br>
-		App Demo<br>
+		Mobile Codelab<br>
 		In this consulting event, I mentored Aaron Crutchfield as he worked on his Android app.<br>
 		</p>
 			
@@ -171,7 +171,7 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 		<p><image src="ltu_2014.jpg" style="width:560px;height:380px;" alt="LTU Collaboratory 2014"><br>
 		<a href="http://www.ltucollaboratory.com/" target="_blank">LTU Collaboratory</a> 2014<br>
 		From left to right: Rod M., Jorge Chagas, Francis "Tex" Criqui<br>
-		In this event, Jorge and I won the "Best Team Award" for building a language learning app<br>
+		In this event, Jorge and I won the "Best Team Award" for building a language learning app.<br>
 		</p>
 		
 		<t9>Feedback</t9>
