--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 		I can help you set it up.</p>
 	
 		<t8>Cost to attend</t8>
-		<p>$0.00 - Endorse or write me a recommendation on LinkedIn if I was helpful :)</p>
+		<p>$0.00 - Endorse or write me a recommendation on 
+			<a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a> if I was helpful :)</p>
 
 		<t9>Location</t9>
 		<p>Ann Arbor & Southfield area (specific location will vary depending on demand)</p>
