--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ For non-tech professionals, learning how to build mobile apps will increase thei
 <p>
 Rod M. - Organizer<br>
 Email: <a href="mailto:rmesquita@ltu.edu">rmesquita@ltu.edu</a><br>
-Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><br/></p>
+Social Network: <a href="https://www.linkedin.com/in/rodmesquita/" target="_blank">LinkedIn</a><br/></p>
 	
 		<t7>What to bring</t7>
 		<p>You can bring your laptop if you want to get started or if you need help with building your app,<br>
@@ -143,7 +143,7 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a><
 	
 		<t8>Cost to attend</t8>
 		<p>$0.00 - Endorse or write me a recommendation on 
-			<a href="https://www.linkedin.com/in/rodmesquita/">LinkedIn</a> if I was helpful :)</p>
+			<a href="https://www.linkedin.com/in/rodmesquita/" target="_blank">LinkedIn</a> if I was helpful :)</p>
 
 		<t9>Location</t9>
 		<p>Ann Arbor & Southfield area (specific location will vary depending on demand)</p>
