--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ For non-tech professionals, learning how to build mobile apps will increase thei
 <t4>My focus<br/></t4>
 <div class="focus">
 	<ul>
-		<li>Share my professional experience building mobile apps.</li>
+		<li>Share my professional experience building mobile apps in Java and Kotlin.</li>
 		<li>Show non-technical entrepreneurs how to get started in a highly technological market.</li>
 	</ul>
 </div>
@@ -139,7 +139,7 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/" target="_blan
 		but if you just want to learn more, bring something to write on (if you want to take notes).<br>
 		To get the most from your session, please have 
 		<a href="https://developer.android.com/studio/" target="_blank">Android Studio</a> downloaded in your computer.<br>
-		I can help you set it up.</p>
+		I can help you set it up. It works with both Windows and Apple computers.</p>
 	
 		<t8>Cost to attend</t8>
 		<p>$0.00 - Endorse or write me a recommendation on 
