--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ For non-tech professionals, learning how to build mobile apps will increase thei
 <t4>My focus<br/></t4>
 <div class="focus">
 	<ul>
-		<li>Share my professional experience building mobile apps in Java and Kotlin.</li>
+		<li>Share my professional experience building mobile apps with Java and Kotlin.</li>
 		<li>Show non-technical entrepreneurs how to get started in a highly technological market.</li>
 	</ul>
 </div>
@@ -135,11 +135,11 @@ Email: <a href="mailto:rmesquita@ltu.edu">rmesquita@ltu.edu</a><br>
 Social Network: <a href="https://www.linkedin.com/in/rodmesquita/" target="_blank">LinkedIn</a><br/></p>
 	
 		<t7>What to bring</t7>
-		<p>You can bring your laptop if you want to get started or if you need help with building your app,<br>
+		<p>You can bring your Mac or Windows laptop if you want to get started or if you need help with building your app,<br>
 		but if you just want to learn more, bring something to write on (if you want to take notes).<br>
 		To get the most from your session, please have 
 		<a href="https://developer.android.com/studio/" target="_blank">Android Studio</a> downloaded in your computer.<br>
-		I can help you set it up. It works with both Windows and Apple computers.</p>
+		I can help you set it up.</p>
 	
 		<t8>Cost to attend</t8>
 		<p>$0.00 - Endorse or write me a recommendation on 
