--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/" target="_blan
 		<p><image src="ltu_2014.jpg" style="width:560px;height:380px;" alt="LTU Collaboratory 2014"><br>
 		<a href="http://www.ltucollaboratory.com/" target="_blank">LTU Collaboratory</a> 2014<br>
 		From left to right: Rod M., Jorge Chagas, Francis "Tex" Criqui<br>
-		In this event, Jorge and I won the "Best Team Award" for building a language learning app.<br>
+		In this event, Jorge and I won the "Best Team Award" for building Vopio, a language learning app.<br>
 		</p>
 		
 		<t9>Feedback</t9>
