--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ table{
 
 <br><t1>Who is this for?</t1>
 <p>Non-technical entrepreneurs and professionals interested in learning more about mobile app development.<br>
-For non-tech entrepreneurs, hiring a team of developers to build their app can be prohibitely expesinve, so why not do it in-house?<br>
-For non-tech professionals, learning how to build mobile apps will increase their career options.</p>
+For entrepreneurs, hiring a team of developers to build their app can be prohibitely expesinve, so why not do it in-house?<br>
+For professionals, learning how to build mobile apps will increase their career options.</p>
 
 <t2>About me<t/2>
 	<p><em>What I stand for:</em><br>
