--- a/index.html
+++ b/index.html
@@ -81,11 +81,12 @@ table{
 </head> 
 <body>
 <div class="container_top">
-<h1>Android App Development Consulting<h1/>
+<h1>Mobile App Development Consulting<h1/>
 </div>
 <div class="banner">
 	<table>
 		<tr>
+			<th style="text-align:left;width:200px;" rowspan="3"><image src="apple-logo.jpg" style="width:130px;height:160px;" alt="iOS"></th>
 			<th style="text-align:left;width:200px;" rowspan="3"><image src="logo.png" style="width:200px;height:200px;" alt="Android"></th>
 			<th style="text-align:left;"><h2><em>Fostering Technology,</em></h2></th>
 		</tr>
