--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@ table{
 <div class="banner">
 	<table>
 		<tr>
-			<th style="text-align:left;width:200px;" rowspan="3"><image src="apple-logo.jpg" style="width:130px;height:160px;" alt="iOS"></th>
-			<th style="text-align:left;width:200px;" rowspan="3"><image src="logo.png" style="width:200px;height:200px;" alt="Android"></th>
-			<th style="text-align:left;"><h2><em>Fostering Technology,</em></h2></th>
+			<th style="text-align:left;"><h2><em>Fostering Mobile Technology,</em></h2></th>
 		</tr>
 		<tr>
 			<th style="text-align:center;"><h2><em>Entrepreneurship,</em></h2></th>
