--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ table{
 
 <br><t1>Who is this for?</t1>
 <p>Non-technical entrepreneurs and professionals interested in learning more about mobile app development.<br>
-For entrepreneurs, hiring a team of developers to build their app can be prohibitely expensive, but I can build your MVP.<br>
+For entrepreneurs, hiring a team of developers to build their app can be too expensive, so I can build your MVP.<br>
 For professionals, learning how to build mobile apps will increase their career options.</p>
 
 <t2>About me<t/2>
