--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ For professionals, learning how to build mobile apps will increase their career 
 	
 <t6>Contact me</t6>
 <p>
-Rod M. - Organizer<br>
+Name: Rod M.<br>
 Email: <a href="mailto:rmesquita@ltu.edu">rmesquita@ltu.edu</a><br>
 Social Network: <a href="https://www.linkedin.com/in/rodmesquita/" target="_blank">LinkedIn</a><br/></p>
 	
